[gd_scene format=3 uid="uid://bkt6dnbw4i1tk"]

[ext_resource type="Script" uid="uid://cxh5nyubolne6" path="res://scripts/ui/skill_link_panel.gd" id="1_panel"]

[node name="SkillLinkPanel" type="Control" unique_id=828076733]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_panel")

[node name="Dimmer" type="ColorRect" parent="." unique_id=2078732800]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1544527976]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer" unique_id=1183583118]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBox" unique_id=674134209]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBox/Header" unique_id=1275905018]
layout_mode = 2
size_flags_horizontal = 3
text = "技能連結"

[node name="CloseButton" type="Button" parent="PanelContainer/VBox/Header" unique_id=1987338677]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBox" unique_id=2105679353]
layout_mode = 2

[node name="SkillSection" type="VBoxContainer" parent="PanelContainer/VBox" unique_id=1359075148]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBox/SkillSection" unique_id=1021377711]
layout_mode = 2
text = "技能寶石"

[node name="SkillSlot" type="Button" parent="PanelContainer/VBox/SkillSection" unique_id=1759332302]
layout_mode = 2
text = "（空）"

[node name="SkillTestRow" type="HBoxContainer" parent="PanelContainer/VBox/SkillSection" unique_id=1599801781]
visible = false
layout_mode = 2

[node name="TestSlash" type="Button" parent="PanelContainer/VBox/SkillSection/SkillTestRow" unique_id=126898181]
layout_mode = 2
text = "測試：斬擊"

[node name="TestArrow" type="Button" parent="PanelContainer/VBox/SkillSection/SkillTestRow" unique_id=675405663]
layout_mode = 2
text = "測試：箭矢"

[node name="TestNova" type="Button" parent="PanelContainer/VBox/SkillSection/SkillTestRow" unique_id=1530648773]
layout_mode = 2
text = "測試：震波"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBox" unique_id=1395276599]
layout_mode = 2

[node name="SupportSection" type="VBoxContainer" parent="PanelContainer/VBox" unique_id=475814399]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBox/SupportSection" unique_id=324020313]
layout_mode = 2
text = "輔助寶石"

[node name="SupportGrid" type="GridContainer" parent="PanelContainer/VBox/SupportSection" unique_id=1258470709]
layout_mode = 2
columns = 5

[node name="SupportTestRow" type="HBoxContainer" parent="PanelContainer/VBox/SupportSection" unique_id=481947494]
visible = false
layout_mode = 2

[node name="AddQuick" type="Button" parent="PanelContainer/VBox/SupportSection/SupportTestRow" unique_id=1629162214]
layout_mode = 2
text = "輔助：迅捷"

[node name="AddDamage" type="Button" parent="PanelContainer/VBox/SupportSection/SupportTestRow" unique_id=648052567]
layout_mode = 2
text = "輔助：增傷"

[node name="AddPierce" type="Button" parent="PanelContainer/VBox/SupportSection/SupportTestRow" unique_id=720182005]
layout_mode = 2
text = "輔助：穿透"

[node name="ClearSupports" type="Button" parent="PanelContainer/VBox/SupportSection/SupportTestRow" unique_id=725892025]
layout_mode = 2
text = "清空輔助"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBox" unique_id=2108366914]
layout_mode = 2

[node name="InventoryRow" type="HBoxContainer" parent="PanelContainer/VBox" unique_id=409998381]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="SkillInventorySection" type="VBoxContainer" parent="PanelContainer/VBox/InventoryRow" unique_id=557353711]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBox/InventoryRow/SkillInventorySection" unique_id=154747552]
layout_mode = 2
text = "技能背包"

[node name="SkillInventoryScroll" type="ScrollContainer" parent="PanelContainer/VBox/InventoryRow/SkillInventorySection" unique_id=124205248]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="SkillInventoryGrid" type="GridContainer" parent="PanelContainer/VBox/InventoryRow/SkillInventorySection/SkillInventoryScroll" unique_id=1984784273]
layout_mode = 2
columns = 7

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBox/InventoryRow" unique_id=1556533253]
layout_mode = 2

[node name="SupportInventorySection" type="VBoxContainer" parent="PanelContainer/VBox/InventoryRow" unique_id=1425465914]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBox/InventoryRow/SupportInventorySection" unique_id=1465651788]
layout_mode = 2
text = "輔助背包"

[node name="SupportInventoryScroll" type="ScrollContainer" parent="PanelContainer/VBox/InventoryRow/SupportInventorySection" unique_id=624354283]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="SupportInventoryGrid" type="GridContainer" parent="PanelContainer/VBox/InventoryRow/SupportInventorySection/SupportInventoryScroll" unique_id=222535999]
layout_mode = 2
columns = 7

[node name="Footer" type="HBoxContainer" parent="PanelContainer/VBox" unique_id=2091297511]
layout_mode = 2

[node name="HintLabel" type="Label" parent="PanelContainer/VBox/Footer" unique_id=543512161]
layout_mode = 2
size_flags_horizontal = 3
text = "點擊背包裝上 | 點擊槽位卸下 | K/ESC 關閉"

[node name="ItemTooltip" type="PanelContainer" parent="." unique_id=986621934]
visible = false
z_index = 100
layout_mode = 0
offset_right = 260.0
offset_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="ItemTooltip" unique_id=1586338986]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TooltipText" type="RichTextLabel" parent="ItemTooltip/MarginContainer" unique_id=595643195]
layout_mode = 2
bbcode_enabled = true
text = "Tooltip"
fit_content = true

[connection signal="pressed" from="PanelContainer/VBox/Header/CloseButton" to="." method="close"]
